nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.theme.css
/* ... */
.nunaliit_atlas .nunaliit_module_title .nunaliit_login_greeting_outer_container {
	display: none;
}

/* ============================== */
/* ! Login User Menu  SECTION   */
/* ============================== */
.nunaliit_login_menu {
	display: none;
	position: absolute; 
	top: 60px;
	right: 10px;
	z-index: 11;
	background-color: {{loginmenu.background}};
	color: {{loginmenu.color.hover}};
	padding: 10px;
	border-radius: 2px;
	box-shadow: -1px 0px 1px #aaaaaa, 1px 0px 1px #aaaaaa, 0px 3px 5px 1px rgba(200,200,200,0.5);
	transition: ease all 0.5s;
}
.nunaliit_login_menu a:-webkit-any-link {
	color: {{loginmenu.color}};
	text-decoration: none;
}
.nunaliit_login_menu.show_menu {
	display: block;
	transition: ease all 0.5s;
}

.nunaliit_login_menu.show_menu .n2ShowInsertedUserDisplayName .n2Show_userName {
	display: none;
} 

.nunaliit_login_menu ul {
	padding: 0px;
	margin: 0px;
}

.nunaliit_login_link,
.nunalitt_login_profile_icon,
.nunaliit_login_menu li {
	cursor: pointer;
}

.nunalitt_login_profile_icon {
	background: url(./images/profile_icon.png) {{loginmenu.background}};
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    object-fit: cover;
	width: 35px;
	height: 35px;
	border-radius: 50px;
	vertical-align: middle;
}

.nunaliit_login_menu_list_container,
.nunaliit_login_menu_profile_container {
    display: inline-block;
    padding: 5px;
}

.nunaliit_login_menu_profile_container {
	max-width: 91px;
	text-align: center;
}

.nunaliit_login_menu_list_container {
	vertical-align: top;
    padding-top: 10px;
    color: {{loginmenu.color}};
    transition: ease all 0.3s;	
}

.nunaliit_login_menu_list_container li,
.nunaliit_login_menu_list_container a {
    color: {{loginmenu.color}};
    text-decoration: none;
}
.nunaliit_login_menu_list_container li:hover,
.nunaliit_login_menu_list_container a:hover {
	color: {{loginmenu.color.hover}};
	transition: ease all 0.3s;	
}

.nunaliit_login_menu_profile_container .n2s_insertedMediaView,  
.nunaliit_login_menu_profile_image {
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    object-fit: cover;
    border-radius: 50px;
    border: 3px solid {{loginmenu.color}};
	width: 85px;
	height: 85px;
	margin-left: auto;
    margin-right: auto;
}

.nunaliit_login_menu_profile_image {
	background-image: url(./images/profile_icon.png);
}

.nunaliit_login_menu_profile_container .n2s_insertedMediaView img {
	border: 0;
	border-radius: 50px;
}

.nunaliit_login_menu_profile_username {
    text-align: center;
    font-size: 1.2em;
    font-weight: bold;
    padding-top: 5px;
    text-transform: capitalize;
    color: {{loginmenu.color}};
    max-width: 85px;
}

.nunaliit_login_menu_mask {
	position: absolute;
	top: 0;
	left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
}

/* ============================== */
/* ! Language Switcher  SECTION   */
/* ============================== */
.nunaliit_atlas .nunaliit_header_language {
	float: right;
	padding: 8px 20px;
}
.nunaliit_atlas .nunaliit_header_language a
,.nunaliit_atlas .nunaliit_header_language a:visited {
	color: {{header.color}};
	text-decoration: none;
}

/* ============================== */
/* ! Help Button SECTION   */
/* ============================== */
.nunaliit_atlas .nunaliit_help_button {
	float: right;
	margin: 3px 10px;
	background: url(./images/help.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
	object-fit: cover;
	width: 23px;
	height: 23px;
}
.nunaliit_atlas .nunaliit_help_button a
,.nunaliit_atlas .nunaliit_help_button a:visited {
	color: {{header.color}};
	text-decoration: none;
	padding: 6px 12px;
	vertical-align: bottom;
	line-height: 23px;
}

/* ============================== */
/* ! CreateDocument widget  SECTION   */
/* ============================== */
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocument {
	float: right;
	padding: 4px 10px;
}
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocument.n2widget_createDocument_asLink {
	padding: 8px 20px;
}
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocumentFromSchema,
.nunaliit_atlas .nunaliit_module_title .n2widget_export,
.nunaliit_atlas .nunaliit_module_title .n2widget_modelBrowser
 {
	float: right;
	padding: 8px 20px;
}
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocument a,
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocumentFromSchema a,
.nunaliit_atlas .nunaliit_module_title .n2widget_export a,
.nunaliit_atlas .nunaliit_module_title .n2widget_modelBrowser a,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiDropDownFilterSelection a,
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocument a:visited,
.nunaliit_atlas .nunaliit_module_title .n2widget_createDocumentFromSchema a:visited,
.nunaliit_atlas .nunaliit_module_title .n2widget_export a:visited,
.nunaliit_atlas .nunaliit_module_title .n2widget_modelBrowser a:visited,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a:visited,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiDropDownFilterSelection a:visited {
	color: {{header.color}};
	text-decoration: none;
}

.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a:visited {
	padding-left: 2px;
	padding-right: 2px;
}
.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a.n2widget_multiFilterSelection_selected,
.nunaliit_atlas .nunaliit_module_title .n2widget_multiFilterSelection a.n2widget_multiFilterSelection_selected:visited {
	color: #aaf;
}
/* ... */

